--- a/addInstitution.htm
+++ b/addInstitution.htm
@@ -52,7 +52,7 @@
 						</form>
 					</td>	
 					<td align='center'>
-						<form action="">
+						<form action="viewCourse.htm">
 							<input type="submit" name = "viewCourses" value="View Courses" style="width:100%" onclick="" id="navigationBarButton">
 						</form>
 					</td>
@@ -79,7 +79,7 @@
 						</form>
 					</td>
 					<td align='center'>
-						<form action="">
+						<form action="addCourse.htm">
 							<input type="submit" value="Add Courses" name = "addCourses" style="width:100%" onclick="" id="navigationBarButton">
 						</form>
 					</td>
