--- a/viewCourse.htm
+++ b/viewCourse.htm
@@ -45,7 +45,7 @@
 						</form>
 					</td>
 					<td align='center'>
-						<form action="">
+						<form action="viewInstitution.htm">
 							<input type="submit" value="View Institutions" name="viewInstitutions" style="width:100%" onclick = "" id="navigationBarButton">
 						</form>
 					</td>
