--- a/index.htm
+++ b/index.htm
@@ -39,7 +39,7 @@
 						</form>
 					</td>
 					<td align='center'>
-						<form action="">
+						<form action="viewInstitutions.htm">
 							<input type="submit" value="View Institutions" name="viewInstitutions" style="width:100%" onclick = "" id="navigationBarButton">
 						</form>
 					</td>
@@ -49,7 +49,7 @@
 						</form>
 					</td>	
 					<td align='center'>
-						<form action="">
+						<form action="viewCourse.htm">
 							<input type="submit" name = "viewCourses" value="View Courses" style="width:100%" onclick="" id="navigationBarButton">
 						</form>
 					</td>
@@ -66,7 +66,7 @@
 						</form>
 					</td>
 					<td align='center'>
-						<form action="">
+						<form action="addInstitution.htm">
 							<input type="submit" value="Add Institutions" name="addInstitutions" style="width:100%" onclick = "" id="navigationBarButton">
 						</form>
 					</td>
@@ -76,7 +76,7 @@
 						</form>
 					</td>
 					<td align='center'>
-						<form action="">
+						<form action="addCourse.htm">
 							<input type="submit" value="Add Courses" name = "addCourses" style="width:100%" onclick="" id="navigationBarButton">
 						</form>
 					</td>
