--- a/viewUsers.htm
+++ b/viewUsers.htm
@@ -42,7 +42,7 @@
 						</form>
 					</td>
 					<td align='center'>
-						<form action="">
+						<form action="viewInstitutions.htm">
 							<input type="submit" value="View Institutions" name="viewInstitutions" style="width:100%" onclick = "" id="navigationBarButton">
 						</form>
 					</td>
@@ -52,7 +52,7 @@
 						</form>
 					</td>	
 					<td align='center'>
-						<form action="">
+						<form action="viewCourse.htm">
 							<input type="submit" name = "viewCourses" value="View Courses" style="width:100%" onclick="" id="navigationBarButton">
 						</form>
 					</td>
@@ -69,7 +69,7 @@
 						</form>
 					</td>
 					<td align='center'>
-						<form action="">
+						<form action="addInstitution.htm">
 							<input type="submit" value="Add Institutions" name="addInstitutions" style="width:100%" onclick = "" id="navigationBarButton">
 						</form>
 					</td>
@@ -79,7 +79,7 @@
 						</form>
 					</td>
 					<td align='center'>
-						<form action="">
+						<form action="addCourse.htm">
 							<input type="submit" value="Add Courses" name = "addCourses" style="width:100%" onclick="" id="navigationBarButton">
 						</form>
 					</td>
