--- a/addPrograms.htm
+++ b/addPrograms.htm
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="style.css">
-<title>Program Name</title>
+<title>Add Program</title>
 </head>
 <body>
 <div class="container">
@@ -95,25 +95,25 @@
 	</div>
 	<div class="selectProgramContainer_ViewProgram">
 		<div class="viewUserHeader">
-			<h4>Program Name (Program ID)</h4>
+			<h4>Add Program</h4>
 		</div>
 
 		<div id="programInfoInSelectProgram">
 			<form align="right">
                 <h4 id="programInformationHeader">Program Information</h4>
 				Program ID:
-				<input type="text" name="name" placeholder="Program ID" id="addProgramIDInputInSelectProgram" class="commonTxtBoxCSS">
+				<input type="text" name="name" placeholder="Program ID" class="commonTxtBoxCSS">
 				<br>
 				Program Title:
-				<input type="text" name="programTitle" placeholder="Program Title" id="addProgramTitleInputInSelectProgram"  class="commonTxtBoxCSS">
+				<input type="text" name="programTitle" placeholder="Program Title"   class="commonTxtBoxCSS">
 				<br><br>
 				Program Type:
-				<select id="cmbselectProgramTypeInProgramSelect" class="commonCmbBoxCSS">
+				<select class="commonCmbBoxCSS">
 					<option></option>
 				</select>
 				<br><br>
                 CAE Designation:
-				<select id="cmbselectCAEDesignationInPorgramSelect" class="commonCmbBoxCSS">
+				<select  class="commonCmbBoxCSS">
 					<option></option>
 				</select>
 				<br>
@@ -143,16 +143,16 @@
 			
 			<br>
 			<form action="" id="frmViewTranserInfoInSelectProgram" >
-				<input type="submit" value="View Transfer Information" onclick="" id="btnViewTransferInfo_SelectProgram" class="commonBtnInMappingPrograms">
+				<input type="submit" value="View Transfer Information" onclick="" class="commonBtnInMappingPrograms">
 			</form>
             <form action="" id="frmAddProgramInSelectProgram" >
-				<input type="submit" value="Add Program" onclick="" id="btnAddProgram_SelectProgram" class="commonBtnInMappingPrograms">
+				<input type="submit" value="Add Program" onclick="" class="commonBtnInMappingPrograms">
 			</form>
             <form action="" id="frmRemoveProgramInSelectProgram" >
-				<input type="submit" value="Remove Program" onclick="" id="btnRemoveProgram_SelectProgram" class="commonBtnInMappingPrograms">
+				<input type="submit" value="Remove Program" onclick=""  class="commonBtnInMappingPrograms">
 			</form>
             <form action="" id="frmAddTransferInformationInSelectProgram" >
-				<input type="submit" value="Add Transfer Information" onclick="" id="btnAddTransferInformation_SelectProgram" class="commonBtnInMappingPrograms">
+				<input type="submit" value="Add Transfer Information" onclick=""  class="commonBtnInMappingPrograms">
 			</form>
             
 		<!--end of div mappingProgramsDiv-->
@@ -167,12 +167,12 @@
 					<option></option>
 					<option></option>
 				</select>
-        <input type="text" placeholder="Program Details" id="txtBoxProgramDetailsInSelectProgram"  class="commonTxtBoxCSS">
+        <input type="text" placeholder="Program Details"   class="commonTxtBoxCSS">
             <form action="" id="frmAddCourseSelectProgram" >
-				<input type="submit" value="Add Course" onclick="" id="btnAddCourseInSelectProgram" class="commonBtnInMappingPrograms">
+				<input type="submit" value="Add Course" onclick="" class="commonBtnInMappingPrograms">
 			</form>
             <form action="" id="frmRemoveCourseSelectProgram" >
-				<input type="submit" value="Remove Course" onclick="" id="btnRemoveCourseInSelectProgram" class="commonBtnInMappingPrograms">
+				<input type="submit" value="Remove Course" onclick="" class="commonBtnInMappingPrograms">
 			</form>
             <br>
             <div id="CareerCourseSubDiv">
@@ -188,7 +188,7 @@
 				</select>
                 <br>
                 <form action="" id="frmAddCourseSelectProgram" >
-				<input type="submit" value="Add Course" onclick="" id="btnAddCourseInSelectProgram" class="commonBtnInMappingPrograms">
+				<input type="submit" value="Add Course" onclick="" class="commonBtnInMappingPrograms">
 			     </form>
                 <form action="" id="frmRemoveCourseSelectProgram" >
 				<input type="submit" value="Cancel" onclick="" class="commonBtnInMappingPrograms">
