--- a/addUsers.htm
+++ b/addUsers.htm
@@ -74,7 +74,7 @@
 						</form>
 					</td>
 					<td align='center'>
-						<form action="">
+						<form action="addPrograms.htm">
 							<input type="submit" value="Add Programs" name = "addPrograms" style="width:100%" onclick="" id="navigationBarButton">
 						</form>
 					</td>
@@ -121,18 +121,18 @@
 				<p id="instituteLabel">Institute:</p>
 				<input type="text" name="instituteId" placeholder="Institute ID" id="searchByInstituteID">
 				Or
-				<select id="selectInstituteDropDown">
+				<select id="selectInstituteDropDownInAddUser" class="commonCmbBoxCSS">
 				<option></option>
-					<option>Illinois Institute of Technology</option>
-					<option>University of Illinois At Chicago</option>
-					<option>University of Texas At San Antonio</option>
+					<option></option>
+					<option></option>
+					<option></option>
 				</select>
 			</div>
 			<div class="chooseAdminRights">
 			<form>
 			<p id="adminType">Admin Type:</p>
-			<input type="radio" name="mvccAdmin" value="MVCC Admin" id="mvccAdmin"> MVCC Admin
-			<input type="radio" name="institutionAdmin" value="Institution Admin" id="institutionAdmin"> Institution Admin
+			<input type="radio" name="group1" value="MVCC Admin" id="mvccAdmin"> MVCC Admin
+			<input type="radio" name="group1" value="Institution Admin" id="institutionAdmin"> Institution Admin
 			</form>
 			<!--end of div chooseAdminRights-->
 			</div>
