--- a/viewInstitutions.htm
+++ b/viewInstitutions.htm
@@ -74,7 +74,7 @@
 						</form>
 					</td>
 					<td align='center'>
-						<form action="">
+						<form action="addPrograms.htm">
 							<input type="submit" value="Add Programs" name = "addPrograms" style="width:100%" onclick="" id="navigationBarButton">
 						</form>
 					</td>
