--- a/viewUsers.htm
+++ b/viewUsers.htm
@@ -74,7 +74,7 @@
 						</form>
 					</td>
 					<td align='center'>
-						<form action="">
+						<form action="addPrograms.htm">
 							<input type="submit" value="Add Programs" name = "addPrograms" style="width:100%" onclick="" id="navigationBarButton">
 						</form>
 					</td>
@@ -122,7 +122,7 @@
 				<h2 id="filterByHeader"> Filter By </h2>
 				<br>
 				<p id="instituteLabelInFilterBy"> Institute: </p>
-				<select id="selectInstituteDropDownInFilterBy">
+				<select class="commonCmbBoxCSS">
 					<option></option><option></option><option></option><option></option>
 				</select>
 				<br><br><br>
@@ -131,7 +131,7 @@
 				<br>
 				<input type="submit" value="Apply Filter" name="applyFilterButton" id="applyFilterButtonInFilterBy"><br><br>
 				<p id="adminTypeLabelInFilterBy"> Admin Type: </p>
-				<select id="selectAdminTypeDropBoxInFilterBy">
+				<select class="commonCmbBoxCSS">
 					<option></option><option></option><option></option>
 				</select><br><br>
 				<p id="UserIDLabelInFilterBy"> User ID: </p>
