working JavaScript - sept 7
I have added working JavaScript and other minor changes that you told me to add.

--- a/addCourse.htm
+++ b/addCourse.htm
@@ -7,7 +7,7 @@
 <script type="text/javascript" src="script.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<title>View Institutions</title>
+<title>Add Courses</title>
 </head>
 <body>
 <div class="container">
