--- a/viewUsers.htm
+++ b/viewUsers.htm
@@ -106,19 +106,19 @@
 				</select>
 				<br><br>
 				<form action="viewUsers_selectUser.htm" id="selectUserButtonForm">
-				<input type="submit" name="selectUser" value="Select User" onclick="" id="selectUserButton">
+				<input type="submit" name="selectUser" value="Select User"  id="selectUserButton">
 				</form>
 				<form action="addUsers.htm" id="addUserButtonForm">
-				<input type="submit" name="addUser" value="Add User" onclick="" id="addUserButton">
+				<input type="submit" name="addUser" value="Add User" id="addUserButton">
 				</form>
-				<form action="" id="removeUserButtonForm">
-				<input type="submit" name="removeUser" value="Remove User" onclick="" id="removeUserButton">
+				<form id="removeUserButtonForm">
+				<input type="submit" name="removeUser" value="Remove User" id="removeUserButton">
 				</form>
 				<br>
 				<!--End of div viewUsersMultilineSelect -->
 			</div>
 
-			<div class="filterBy">
+			<div class="filterByInViewUsers">
 				<h2 id="filterByHeader"> Filter By </h2>
 				<br>
 				<p id="instituteLabelInFilterBy"> Institute: </p>
