--- a/viewUsers_selectUser.htm
+++ b/viewUsers_selectUser.htm
@@ -100,23 +100,25 @@
 
 		<div class="addUserForm">
 			<form align="right">
-				Name: 
-				<input type="text" name="name" placeholder="Name" id="addUserInput">
+				First Name: 
+				<input type="text" placeholder="Name" id="addUserInput">
 				<br>
-				Admin Name: 
-				<input type="text" name="adminName" placeholder="Admin Name" id="addUserInput">
-				<br><br>
+                Last Name: 
+				<input type="text" placeholder="Name" id="addUserInput">
+				<br>
+				Admin ID: 
+				<input type="text" placeholder="Admin ID" id="addUserInput">
+				<br>
 				Admin Type:
 				<select id="cmbselectAdminTypeInSelectUser">
 					<option></option>
 				</select>
-				<br><br>
 				<br>
 				Telephone Number (Work):
-				<input type="number" name="telephoneWork" placeholder="Telephone Number" id="addUserInput">
+				<input type="text"  placeholder="Telephone Number" id="addUserInput">
 				<br>
 				Telephone Number (Mobile):
-				<input type="number" name="telephoneMobile" placeholder="Telephone Number" id="addUserInput">
+				<input type="text" placeholder="Telephone Number" id="addUserInput">
 				<br>
 				
 			</form>		
