--- a/viewCourse.htm
+++ b/viewCourse.htm
@@ -5,7 +5,7 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 <script type="text/javascript" src="script.js"></script>
-<title>View Institutions</title>
+<title>View Courses</title>
 </head>
 <body>
 <div class="container">
