Added Institution Logo functionality

--- a/viewCourse.htm
+++ b/viewCourse.htm
@@ -45,7 +45,7 @@
 						</form>
 					</td>
 					<td align='center'>
-						<form action="viewInstitution.htm">
+						<form action="viewInstitutions.htm">
 							<input type="submit" value="View Institutions" name="viewInstitutions" style="width:100%" onclick = "" id="navigationBarButton">
 						</form>
 					</td>
@@ -55,12 +55,12 @@
 						</form>
 					</td>	
 					<td align='center'>
-						<form action="">
+						<form action="viewCourse.htm">
 							<input type="submit" name = "viewCourses" value="View Courses" style="width:100%" onclick="" id="navigationBarButton">
 						</form>
 					</td>
 					<td align='center'>
-						<form action="">
+						<form action="viewAgreements.htm">
 							<input type="submit" name = "viewAgreements" value="View Agreements" style="width:100%" onclick="" id="navigationBarButton">
 						</form>
 					</td>
@@ -82,12 +82,12 @@
 						</form>
 					</td>
 					<td align='center'>
-						<form action="">
+						<form action="addCourse.htm">
 							<input type="submit" value="Add Courses" name = "addCourses" style="width:100%" onclick="" id="navigationBarButton">
 						</form>
 					</td>
 					<td align='center'>
-						<form action="">
+						<form action="addAgreements.htm">
 							<input type="submit" value="Add Agreements" name = "addAgreements" style="width:100%" onclick="" id="navigationBarButton">
 						</form>
 					</td>
@@ -96,6 +96,7 @@
 		</table>
 		<!--End of div navigationBar-->
 	</div>
+
 	<div class="viewCoursesContainer">
 		<div class="viewCoursesHeader">
 			<h4>View Course(s)</h4>
