--- a/viewInstitutions.htm
+++ b/viewInstitutions.htm
@@ -11,7 +11,6 @@
 <!--End of div GlobalAdminsHeader-->
 </div>
 
-
 <div class = "navigationBar">
 			<table id = "adminTable" align="center">
 			<thead>
@@ -57,7 +56,7 @@
 						</form>
 					</td>
 					<td align='center'>
-						<form action="">
+						<form action="viewAgreements.htm">
 							<input type="submit" name = "viewAgreements" value="View Agreements" style="width:100%" onclick="" id="navigationBarButton">
 						</form>
 					</td>
@@ -84,7 +83,7 @@
 						</form>
 					</td>
 					<td align='center'>
-						<form action="">
+						<form action="addAgreements.htm">
 							<input type="submit" value="Add Agreements" name = "addAgreements" style="width:100%" onclick="" id="navigationBarButton">
 						</form>
 					</td>
@@ -93,7 +92,9 @@
 		</table>
 		<!--End of div navigationBar-->
 	</div>
-	<div class="viewInstitutionContainer">
+
+
+    <div class="viewInstitutionContainer">
 		<div class="viewInstitutionHeader">
 			<h4>View Institutions</h4>
 		</div>
