--- a/viewPrograms.htm
+++ b/viewPrograms.htm
@@ -11,8 +11,7 @@
 <!--End of div GlobalAdminsHeader-->
 </div>
 
-
-<div class = "navigationBar">
+    <div class = "navigationBar">
 			<table id = "adminTable" align="center">
 			<thead>
 				
@@ -57,7 +56,7 @@
 						</form>
 					</td>
 					<td align='center'>
-						<form action="">
+						<form action="viewAgreements.htm">
 							<input type="submit" name = "viewAgreements" value="View Agreements" style="width:100%" onclick="" id="navigationBarButton">
 						</form>
 					</td>
@@ -84,7 +83,7 @@
 						</form>
 					</td>
 					<td align='center'>
-						<form action="">
+						<form action="addAgreements.htm">
 							<input type="submit" value="Add Agreements" name = "addAgreements" style="width:100%" onclick="" id="navigationBarButton">
 						</form>
 					</td>
@@ -93,6 +92,8 @@
 		</table>
 		<!--End of div navigationBar-->
 	</div>
+
+
 	<div class="viewUserContainer">
 		<div class="viewProgramHeader">
 			<h4>View Programs</h4>
