Before Testing the Institute Admin Index Page

--- a/addInstitution.htm
+++ b/addInstitution.htm
@@ -106,8 +106,8 @@ text-align: center;
 font-size: 18pt;
 ">
 			<h4>Add Institution</h4>
-		</div>
-        </div>
+		</div> <!-- End AddInstitutionHeader div-->
+        </div><!-- End AddInstitutionContainer div-->
 
     <!-- This Div contains the institution information that will be pulled from the database -->
 			<div class="institutionInformationTable" align="center">
@@ -226,7 +226,7 @@ font-size: 18pt;
 
 			</div>
                 
-                <div id="InstituteLogoDiv" style="height:315px; width:450px border:1px solid" align=center>
+                <div id="InstituteLogoDiv" style="height:315px; width:450px" align=center>
                     <p align="center">
                     <b><u><h3>Institution Logo</h3></u></b><input type="file" name="InstitutionLogo" onchange="readURL(this);">
                     <img id="pic" src="#" />
@@ -249,8 +249,7 @@ font-size: 18pt;
             }
         }
                 </script>                
-    </div>
-        <!-- End of Institution Information Table DIV-->
+    </div> <!-- End of Institution Information Table DIV-->
 
 		
         <!-- This DIV holds the table for the CAE Designations -->
