--- a/selectedInstitution.htm
+++ b/selectedInstitution.htm
@@ -106,7 +106,7 @@
 
     <!-- This Div contains the institution information that will be pulled from the database -->
 			<div class="institutionInformationTable">
-                <div class="InstitutionInfo" style="height:350px;">
+                <div class="InstitutionInfo" style="height:350px;" align="center">
                 <h2 align="center"><u>Institution Information</u></h2>
                 <table>
                     <tr>
