--- a/viewInstitutions.htm
+++ b/viewInstitutions.htm
@@ -103,7 +103,7 @@
                 <table>
                     <tr>
                         <td>
-				<select multiple id="selectInstitution" style="height: 400px">
+				<select multiple id="selectInstitution">
 					<option>  </option>
 					<option>  </option>
 					<option>  </option>
@@ -112,7 +112,7 @@
                     </tr>
                 </table>
                 
-                <table>
+                <table align=center>
                     <tr>
                         <td>
                             <form action = "selectedInstitution.htm">
