Created a new navigation bar

--- a/testpage2.htm
+++ b/testpage2.htm
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="viewInstitutionsStyle.css">
+<link rel="stylesheet" href="testpage2.css">
 <title>View Institutions</title>
 </head>
 <body>
 <div class="container">
-
-    <!-- Testing, Testing: 1,2,3 -->
+<!-- <div class="GlobalAdminsHeader"> -->
+<!-- <h2>Global Admin</h2> -->
+<!--End of div GlobalAdminsHeader-->
+<!-- </div> -->
+    
+<!-- Testing, Testing: 1,2,3 -->
 <div id="DDNavBar">
 <h2 align=center>Global Admin</h2>
     <ul>
@@ -64,7 +68,6 @@
   
   </ul>
     </div><!-- End div id=DDNavBar -->
-
 
     <div class="viewInstitutionContainer">
 		<div class="viewInstitutionHeader">
