--- a/addInstitution.htm
+++ b/addInstitution.htm
@@ -5,13 +5,13 @@
 <link class="jsbin" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1/themes/base/jquery-ui.css" rel="stylesheet" type="text/css" />
 <script class="jsbin" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 <script class="jsbin" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.0/jquery-ui.min.js"></script>
-<title>View Institutions</title>
+<title>Add Institutions</title>
 </head>
 <body>
 <div class="container">
 
 <!-- Testing, Testing: 1,2,3 -->
-<div id="DDNavBar">
+<div id="DDNavBar" class="DDNavBar">
 <h2 align=center>Global Admin</h2>
     <ul>
         <li></li>
