--- a/addUsers.htm
+++ b/addUsers.htm
@@ -12,7 +12,7 @@
 <h2 align=center>Global Admin</h2>
    <ul>
        <li></li>
- <li><a href="#home">Home</a></li>
+ <li><a href="index.htm">Home</a></li>
  
  <li class="dropdown" style="float:right">
    <a href="javascript:void(0)" class="dropbtn">Global Admin Profile</a>
