--- a/testpage.htm
+++ b/testpage.htm
@@ -25,7 +25,7 @@
     </div>
     
     <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Home</a></li>
+      <li class="active"><a href="index.htm">Home</a></li>
       
       <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Users <span class="caret"></span></a>
         <ul class="dropdown-menu">
