Institution Admin Pages Created

--- a/InstitutionAdmin/IA_Index.htm
+++ b/InstitutionAdmin/IA_Index.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
  <html> 
  <head> 
- <link rel="stylesheet" href="index.css">
+ <link rel="stylesheet" href="IA_IndexStyle.css">
 <title>CSSIA Database</title> 
 </head>
 <body> 
@@ -9,13 +9,13 @@
 
 <!-- Testing, Testing: 1,2,3 -->
 <div id="DDNavBar">
-<h2 align=center>Global Admin</h2>
+<h2 align=center>Institution Admin</h2>
     <ul>
         <li></li>
-  <li><a href="index.htm">Home</a></li>
+  <li><a href="IA_Index.htm">Home</a></li>
   
   <li class="dropdown" style="float:right">
-    <a href="javascript:void(0)" class="dropbtn">Global Admin Profile</a>
+    <a href="javascript:void(0)" class="dropbtn">Institution Admin Profile</a>
     <div class="dropdown-content">
       <a href="#">View Profile</a>
       <a href="#">Logout</a>
@@ -25,32 +25,32 @@
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">Users</a>
     <div class="dropdown-content">
-      <a href="viewUsers.htm">View Users</a>
-      <a href="addUsers.htm">Add Users</a>
+      <a href="IA_viewUsers.htm">View Users</a>
+     <!-- <a href="addUsers.htm">Add Users</a> -->
     </div>
   </li>
   
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">Institutions</a>
     <div class="dropdown-content">
-      <a href="viewInstitutions.htm">View Institutions</a>
-      <a href="addInstitution.htm">Add Institutions</a>
+      <a href="IA_viewInstitutions.htm">View Institutions</a>
+      <!-- <a href="addInstitution.htm">Add Institutions</a> -->
     </div>
   </li>
   
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">Programs</a>
     <div class="dropdown-content">
-      <a href="viewPrograms.htm">View Programs</a>
-      <a href="addPrograms.htm">Add Programs</a>
+      <a href="IA_viewPrograms.htm">View Programs</a>
+      <a href="IA_addPrograms.htm">Add Programs</a>
     </div>
   </li>
 
 <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">Courses</a>
     <div class="dropdown-content">
-      <a href="viewCourse.htm">View Courses</a>
-      <a href="addCourse.htm">Add Courses</a>
+      <a href="IA_viewCourse.htm">View Courses</a>
+      <a href="IA_addCourse.htm">Add Courses</a>
     </div>
   </li>
   
