Updated Nav Bar

--- a/InstitutionAdmin/IA_addCourse.htm
+++ b/InstitutionAdmin/IA_addCourse.htm
@@ -13,7 +13,7 @@
 <div class="container">
     
   <!-- Testing, Testing: 1,2,3 -->
-<div id="DDNavBar"> <!-- Dropdown navigation bar -->
+<div id="DDNavBar">
 <h2 align=center>Institution Admin</h2>
     <ul>
         <li></li>
@@ -22,7 +22,8 @@
   <li class="dropdown" style="float:right">
     <a href="javascript:void(0)" class="dropbtn">Institution Admin Profile</a>
     <div class="dropdown-content">
-      <a href="#">View Profile</a>
+      <a href="#">View User Profile</a>
+      <a href="#">View Institution Profile</a>
       <a href="#">Logout</a>
     </div>
   </li>
@@ -30,32 +31,32 @@
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">Users</a>
     <div class="dropdown-content">
-      <a href="#">View Users</a>
-      <!-- <a href="#">Add Users</a> -->
+      <a href="IA_viewUsers.htm">View All Users</a>
+      <a href="IA_addInstitutionUsers.htm">Add Institution Users</a>
     </div>
   </li>
   
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">Institutions</a>
     <div class="dropdown-content">
-      <a href="IA_viewInstitutions.htm">View Institutions</a>
-      <!-- <a href="addInstitution.htm">Add Institutions</a> -->
+      <a href="IA_viewInstitutions.htm">View All Institutions</a>
+      <a href="IA_editInstitutions.htm">Edit Your Institution</a>
     </div>
   </li>
   
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">Programs</a>
     <div class="dropdown-content">
-      <a href="#">View Programs</a>
-      <!-- <a href="#">Add Programs</a> -->
+      <a href="IA_viewPrograms.htm">View All Programs</a>
+      <a href="IA_editPrograms.htm">Edit Your Programs</a>
     </div>
   </li>
 
 <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">Courses</a>
     <div class="dropdown-content">
-      <a href="IA_viewCourse.htm">View Courses</a>
-      <a href="IA_addCourse.htm">Add Courses</a>
+      <a href="IA_viewCourse.htm">View All Courses</a>
+      <a href="IA_addCourse.htm">Add A Course To Your Program</a>
     </div>
   </li>
   
