--- a/InstitutionAdmin/IA_viewCourse.htm
+++ b/InstitutionAdmin/IA_viewCourse.htm
@@ -20,7 +20,8 @@
   <li class="dropdown" style="float:right">
     <a href="javascript:void(0)" class="dropbtn">Institution Admin Profile</a>
     <div class="dropdown-content">
-      <a href="#">View Profile</a>
+      <a href="#">View User Profile</a>
+      <a href="#">View Institution Profile</a>
       <a href="#">Logout</a>
     </div>
   </li>
@@ -28,32 +29,32 @@
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">Users</a>
     <div class="dropdown-content">
-      <a href="IA_viewUsers.htm">View Users</a>
-     <!-- <a href="addUsers.htm">Add Users</a> -->
+      <a href="IA_viewUsers.htm">View All Users</a>
+      <a href="IA_addInstitutionUsers.htm">Add Institution Users</a>
     </div>
   </li>
   
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">Institutions</a>
     <div class="dropdown-content">
-      <a href="IA_viewInstitutions.htm">View Institutions</a>
-      <!-- <a href="addInstitution.htm">Add Institutions</a> -->
+      <a href="IA_viewInstitutions.htm">View All Institutions</a>
+      <a href="IA_editInstitutions.htm">Edit Your Institution</a>
     </div>
   </li>
   
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">Programs</a>
     <div class="dropdown-content">
-      <a href="IA_viewPrograms.htm">View Programs</a>
-      <a href="IA_addPrograms.htm">Add Programs</a>
+      <a href="IA_viewPrograms.htm">View All Programs</a>
+      <a href="IA_editPrograms.htm">Edit Your Programs</a>
     </div>
   </li>
 
 <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">Courses</a>
     <div class="dropdown-content">
-      <a href="IA_viewCourse.htm">View Courses</a>
-      <a href="IA_addCourse.htm">Add Courses</a>
+      <a href="IA_viewCourse.htm">View All Courses</a>
+      <a href="IA_addCourse.htm">Add A Course To Your Program</a>
     </div>
   </li>
   
