--- a/addInstitution.htm
+++ b/addInstitution.htm
@@ -400,7 +400,12 @@ font-size: 18pt;
 			</div>
 
     <div align="center">
-        <input type="button" id="SaveChanges" name="SaveChanges" value="Save Changes">
+        <table>
+            <tr>
+                <td><input type="button" id="SaveChanges" name="SaveChanges" value="Save Changes" style="width:150px"></td>
+                <td><input type="button" id="Cancel" name="Cancel" value="Cancel" style="width:150px"></td>
+            </tr>
+        </table>
     </div>
 
     </div>
