made different CSS

--- a/viewPrograms.htm
+++ b/viewPrograms.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="viewPrograms.css">
 <title>View Programs</title>
 </head>
 <body>
@@ -80,10 +80,10 @@
 				</select>
 				<br><br>
                 <form action="viewPrograms_selectProgram.htm" id="btnSelectProgramInViewPrograms" style="float: left">
-                    <input type="submit" name="selectProgram" value="Select Program" onclick="" id="selectProgramButton" class="commonBtnInViewPrograms">
+                    <input type="submit" name="selectProgram" value="Select Program" onclick="" id="selectProgramButton" class="commonBtn2InViewPrograms">
                 </form>
                <form action = "addPrograms.htm" id="btnAddProgramInViewPrograms" style="float: left">
-                <input type="submit" name="addProgram" value="Add Program" onclick="" id="addProgramButton" class="commonBtnInViewPrograms">
+                <input type="submit" name="addProgram" value="Add Program" onclick="" id="addProgramButton" class="commonBtn2InViewPrograms">
                    
                 </form>
                 
