--- a/viewUsers_selectUser.htm
+++ b/viewUsers_selectUser.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="viewUsers_selectUser.css">
 <title>User Name</title>
 </head>
 <body>
@@ -120,10 +120,10 @@
 		</div>
 		<div id="saveOrCancelButtons">
 			<form action="" id="saveChangesToUserName" >
-				<input type="submit" value="Save Changes" name = "saveChangesToUserName" onclick="" id="navigationBarButton">
+				<input type="submit" value="Save Changes" class="btnSaveChanges">
 			</form>
 			<form action="" id="cancelChangesToUserName">
-				<input type="submit" value="Cancel Changes" name = "cancelChangesToUserName" onclick="" id="navigationBarButton">
+				<input type="submit" value="Cancel Changes" name = "cancelChangesToUserName" class="btnCancelChanges">
 			</form>
 			<!--End of save or cancel buttons div-->
 		</div>	
