--- a/addUsers.htm
+++ b/addUsers.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="addUsers.css">
 <title>Add Users</title>
 </head>
 <body>
@@ -94,7 +94,7 @@
 			<fieldset>
 				<legend > Institute</legend>
 				<input type="text" name="instituteId" placeholder="Institute ID" class="commonTxtBox2CSS">
-                <br>
+                
 				<p>OR</p>
 				<select id="selectInstituteDropDownInAddUser" class="commonCmbBox3CSS">
 				<option></option>
