--- a/InstitutionAdmin/IA_editInstitutions.htm
+++ b/InstitutionAdmin/IA_editInstitutions.htm
@@ -4,7 +4,7 @@
 <link class="jsbin" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1/themes/base/jquery-ui.css" rel="stylesheet" type="text/css" />
 <script class="jsbin" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 <script class="jsbin" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.0/jquery-ui.min.js"></script>
-<link rel="stylesheet" href="IA_editInstitutionStyle.css">
+<link rel="stylesheet" href="IA_editInstitutionsStyle.css">
 <title>View Institutions</title>
 </head>
 <body>
