Added new files to Institute admin folder
Global Admins--Add Programs--Removed mapped program div
Selected Program- Removed mapped program div

New files in Institute admin folder--
View all Users page added
Add new Institution user page added
edit your institution user page added
View all programs page added
Edit your institution program page added

--- a/InstitutionAdmin/IA_Index.htm
+++ b/InstitutionAdmin/IA_Index.htm
@@ -18,7 +18,7 @@
     <a href="javascript:void(0)" class="dropbtn">Institution Admin Profile</a>
     <div class="dropdown-content">
       <a href="#">View User Profile</a>
-      <a href="#">View Institution Profile</a>
+      <a href="IA_InstituteProfile.htm">View Institution Profile</a>
       <a href="#">Logout</a>
     </div>
   </li>
@@ -43,7 +43,7 @@
     <a href="javascript:void(0)" class="dropbtn">Programs</a>
     <div class="dropdown-content">
       <a href="IA_viewPrograms.htm">View All Programs</a>
-      <a href="IA_editPrograms.htm">Edit Your Programs</a>
+      <a href="IA_editProgramsInYourInstitute.htm">Edit Your Programs</a>
     </div>
   </li>
 
