--- a/InstitutionAdmin/IA_editProgramsInYourInstitute.htm
+++ b/InstitutionAdmin/IA_editProgramsInYourInstitute.htm
@@ -3,21 +3,21 @@
 <head>
    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-<link rel="stylesheet" href="addPrograms.css">
-<title>Add Program</title>
+<link rel="stylesheet" href="IA_editProgramsInYourInstitute.css">
+<title>Edit Program Program In Your Institute</title>
 </head>
 <body>
 <div class="container">
 	<!-- Beginning of the new navigation bar html code -->
 <!-- Testing, Testing: 1,2,3 -->
 <div id="DDNavBar">
-<h2 align=center>Global Admin</h2>
+<h2 align=center>Instituttion Admin</h2>
    <ul>
        <li></li>
  <li><a href="index.htm">Home</a></li>
  
  <li class="dropdown" style="float:right">
-   <a href="javascript:void(0)" class="dropbtn">Global Admin Profile</a>
+   <a href="javascript:void(0)" class="dropbtn">Institute Admin Profile</a>
    <div class="dropdown-content">
      <a href="#">View Profile</a>
      <a href="#">Logout</a>
@@ -70,7 +70,7 @@
 
 <div class="selectProgramContainer_ViewProgram">
 		<div class="viewUserHeader">
-			<h4>Add Program</h4>
+			<h4>Edit Program In Your Institute</h4>
 		</div>
 
 		<div class="programInfoInSelectProgram">
