--- a/addUsers.htm
+++ b/addUsers.htm
@@ -74,17 +74,26 @@
 
 		<div class="addUserForm">
 			<form align="right">
-				Admin Name: 
-				<input type="text" name="adminName" placeholder="Admin Name" id="addUserInput">
+				First Name: 
+				<input type="text" placeholder="First Name" id="addUserInput">
+				<br>
+                Last Name: 
+				<input type="text"  placeholder="Last Name" id="addUserInput">
 				<br>
 				Email (Work):
-				<input type="email" name="userEmail" placeholder="email address" id="addUserInput">
+				<input type="email" placeholder="email address" id="addUserInput">
 				<br>
 				Telephone Number (Work):
-				<input type="number" name="telephoneWork" placeholder="Telephone Number" id="addUserInput">
+				<input type="text" placeholder="Telephone Number" id="addUserInput">
 				<br>
 				Telephone Number (Mobile):
-				<input type="number" name="telephoneMobile" placeholder="Telephone Number" id="addUserInput">
+				<input type="text" placeholder="Telephone Number" id="addUserInput">
+				<br>
+                Position:
+				<input type="text" placeholder="Telephone Number" id="addUserInput">
+				<br>
+				Link:
+				<input type="text" placeholder="Link" id="addUserInput">
 				<br>
 				
 			</form>		
